--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face{
+  font-family: 'roboto';
+  src: url('../public/Roboto.otf');
+}
 /* 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
